--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "co": "^4.6.0",
     "co-prompt": "^1.0.0",
+    "colors": "^1.1.2",
     "commander": "^2.9.0",
     "prompt": "^1.0.0",
     "superagent": "^3.0.0"
